8_06_HW07_test_with_meals