@@ -6,6 +6,7 @@ import org.springframework.test.web.servlet.ResultMatcher;
 import ru.javawebinar.topjava.web.json.JsonUtil;
 
 import java.io.UnsupportedEncodingException;
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiConsumer;
 
@@ -52,7 +53,7 @@ public class MatcherFactory {
 
         @SafeVarargs
         public final void assertMatch(Iterable<T> actual, T... expected) {
-            assertMatch(actual, List.of(expected));
+            assertMatch(actual, Arrays.asList(expected));
         }
 
         public void assertMatch(Iterable<T> actual, Iterable<T> expected) {
@@ -65,7 +66,7 @@ public class MatcherFactory {
 
         @SafeVarargs
         public final ResultMatcher contentJson(T... expected) {
-            return contentJson(List.of(expected));
+            return contentJson(Arrays.asList(expected));
         }
 
         public ResultMatcher contentJson(Iterable<T> expected) {
